@@ -1505,19 +1505,22 @@ For cg graphs:
 For ds graphs:
     --snmp-query-id=[ID] --snmp-query-type-id=[ID] --snmp-field=[SNMP Field] --snmp-value=[SNMP Value]
 
-    [--graph-title=] Defaults to what ever is in the graph template/data-source template.
+    [--graph-title=]       Defaults to what ever is in the graph template/data-source template.
 
+    [--reindex-method=]    the reindex method to be used for that data query
+                           if data query already exists, the reindex method will not be changed
+                    0|None   = no reindexing
+                    1|Uptime = Uptime goes Backwards (Default)
+                    2|Index  = Index Count Changed
+                    3|Fields = Verify all Fields
 List Options:
     --list-hosts
     --list-graph-templates
     --list-input-fields --graph-template-id=[ID]
-More list Options for 'cg' graphs only:
     --list-snmp-queries
-    --list-query-types  --snmp-query-id=[ID]
-    --list-snmp-fields  --host-id=[ID]
-    --list-snmp-values  --host-id=[ID] --snmp-query-id=[ID]
-    --list-snmp-values  --host-id=[ID] --snmp-query-id=[ID] --snmp-field-spec=[field1[,field2]...[,fieldn]]
-    --list-snmp-values  --host-id=[ID] --snmp-field=[Field]
+    --list-query-types  --snmp-query-id [ID]
+    --list-snmp-fields  --host-id=[ID] [--snmp-query-id=[ID]]
+    --list-snmp-values  --host-id=[ID] [--snmp-query-id=[ID]] --snmp-field=[Field]
 
 'cg' graphs are for things like CPU temp/fan speed, while 
 'ds' graphs are for data-source based graphs (interface stats etc.)
@@ -1681,6 +1684,8 @@ Graph Added - graph-id: (39) - data-source-id: (63)</screen>
 				<para>Find the result when visiting <guimenu>Graph Management</guimenu></para>
 				<screen>Graph Title** 			Template Name 		Size
 Device Add Test - CPU Usage 	ucd/net - CPU Usage 	120x500</screen>
+				<para>If the graph template was not associated with that host before, it is now added
+				to the list of <guimenu>Associated Graph Templates</guimenu>.</para>
 			</sect2>
 			<sect2 id="cli_add_graphs_ds">
 			<title>Add Indexed Graphs</title>
@@ -1736,6 +1741,11 @@ Graph Added - graph-id: (40) - data-source-id: (65)</screen>
 				<screen>Graph Title** 				Template Name 				Size
 Device Add Test - CPU Usage 		ucd/net - CPU Usage 			120x500
 Device Add Test - Traffic - lo  	Interface - Traffic (bits/sec)  	120x500</screen>
+				<para>If the data query was not associated with that host before, it is now added
+				to the list of <guimenu>Associated Graph Templates</guimenu>. In this case, the
+				<guimenu>Re-Index Method</guimenu> of <parameter>Uptime Goes Backwards</parameter> 
+				is defaulted if not given otherwise. You may provide a different <guimenu>Re-Index Method</guimenu>
+				by entering the optional parameter <parameter>--reindex-method</parameter>.</para>
 				<para>With <emphasis>Indexed Graphs</emphasis> it is surely possible to add multiple graphs in a single run.</para>
 				<itemizedlist>
 					<listitem><para>Assume a host with multiple interfaces.</para></listitem>
